# python_todolist

./: pyproject.toml
django-todolist/: .gitignore
django-todolist/todolist/todolist_app/: urls.py  views.py
django-todolist/todolist/todolist_app/templates/todolist_app/: todos.html
todolist/templates/: main.html  navbar.html  projects.html
todolist/todolist/: settings.py  urls.py
todolist/todolist_app/: admin.py  forms.py  models.py  urls.py  views.py
todolist/todolist_app/migrations/: 0001_initial.py  0002_remove_todo_addition_date_alter_todo_date.py  0003_tag_review_todo_tags.py  0004_todo_featured_image.py  0005_todo_owner.py
todolist/todolist_app/templates/todolist_app/: delete_template.html  single-todo.html  todo_form.html  todos.html
todolist/users/: models.py  views.py
todolist/users/migrations/: 0001_initial.py  0002_profile_username.py  0003_profile_location_skill.py
todolist/users/templates/users/: profiles.html  user-profile.html
