[tool.poetry]
name = "django-todolist"
version = "0.1.0"
description = ""
authors = ["event1310 <event990@interia.pl>"]
readme = "README.md"
packages = [{include = "django_todolist"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
pytest = "^7.2.1"
pillow = "^9.4.0"
whitenoise = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
